<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="CallHistoryListBinding">
        <variable
            name="callHistoryList"
            type="tta.astrologerapp.talktoastro.model.CallHistoryModel" />
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                 android:padding="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/dp10"
            android:id="@+id/constraint_internal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight_1">

            <TextView
                    android:id="@+id/call_history_astro_name"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/astrologer_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/call_history_astro_name_val"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{callHistoryList.userName}"
                    app:layout_constraintBottom_toBottomOf="@+id/call_history_astro_name"
                    app:layout_constraintEnd_toEndOf="parent" />


            <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call_history_astro_name" />


            <TextView
                    android:id="@+id/call_history_conversatio_dur"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/call_duration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                    android:id="@+id/call_history_conversatio_dur_val"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{callHistoryList.conversationDuration}"
                    app:layout_constraintBottom_toBottomOf="@+id/call_history_conversatio_dur"
                    app:layout_constraintEnd_toEndOf="parent" />


            <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call_history_conversatio_dur" />

            <TextView
                    android:id="@+id/call_history_price"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                    android:id="@+id/call_history_price_val"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{callHistoryList.price}"
                    android:drawablePadding="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/call_history_price"
                    app:layout_constraintEnd_toEndOf="parent" />

            <View
                    android:id="@+id/view_payment_time"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/call_history_price" />

            <TextView
                    android:id="@+id/call_history_status"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_payment_time" />

            <TextView
                    android:id="@+id/call_history_status_val"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{callHistoryList.status}"
                    app:layout_constraintBottom_toBottomOf="@id/call_history_status"
                    app:layout_constraintEnd_toEndOf="parent" />

            <View
                    android:id="@+id/view_history_status"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/call_history_status" />

            <TextView
                    android:id="@+id/call_history_call_timee"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/call_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_history_status" />

            <TextView
                    android:id="@+id/call_history_call_time_val"
                    style="@style/style_body_title_h1_regular_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{callHistoryList.callTime}"
                    app:layout_constraintBottom_toBottomOf="@id/call_history_call_timee"
                    app:layout_constraintEnd_toEndOf="parent" />

            <View
                    android:id="@+id/view_history_call_time"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/call_history_call_timee" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>